# spotify-playlist-maker

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  readme.md
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
src/: App.jsx  lib.rs  main.rs
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  lib.rs
tests/: integration_tests.rs
